NTI-6981 fix error message on firefox

--- a/src/main/js/nti-web-site-admin/components/users/list/InvitePeople.scss
+++ b/src/main/js/nti-web-site-admin/components/users/list/InvitePeople.scss
@@ -14,6 +14,7 @@
 			display: inline-flex;
 			align-items: center;
 			flex-direction: row;
+			vertical-align: bottom;
 		}
 	}
 
